# Receipt-Generator

./: .dockerignore  .env.example  .env.template  .flake8  .gitignore  COMPLETION_SUMMARY.md  CONTRIBUTING.md  COVERAGE_CHECK_SUMMARY.md  Dockerfile  FILE_INVENTORY.md  FINAL_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  Makefile  PRODUCTION_ANALYSIS.md  PRODUCTION_READY.md  PRODUCTION_READY_STATUS.md  QUICK_REFERENCE.md  README.md  README.md.backup  SECURITY.md  TRUE_PRODUCTION_READY.md  WORKSPACE_SETUP.md  analyze_downloaded_dataset.py  check_image_sizes.py  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  requirements_crf.txt  setup.py
.github/: copilot-instructions.md
annotation/: __init__.py  annotation_schema.py  annotation_writer.py  annotator.py  bbox_extractor.py  label_mapper.py  ocr_engine.py  token_annotator.py
augmentation/: __init__.py  augmenter.py  settings.yaml
config/: config.yaml  label_resolution_matrix.yaml  labels.yaml  labels_enhanced.yaml  labels_reduced.yaml  labels_retail.yaml  logging_config.py  metrics.py  template_categories.yaml  template_config.py  template_pagination.yaml  template_pagination.yaml.backup  training_config.yaml
data/: README.md
deployment/: __init__.py  api.py  batch_runner.py  model_loader.py
docs/: ALL_STEPS_COMPLETE.md  ANNOTATION_SCHEMA.md  AUGMENTATION_IMPROVEMENTS.md  AUGMENTATION_INTEGRATION.md  COMPLETE_SUMMARY.md  COVERAGE_COMPARISON_MATRIX.md  CRITICAL_ISSUES_ANALYSIS.md  CRITICAL_ISSUES_SOLUTIONS.md  ENHANCED_SCHEMA_GUIDE.md  HYBRID_PRODUCTION_SOLUTION.md  LABEL_COVERAGE_ANALYSIS.md  LABEL_REDUCTION_ANALYSIS.md  LABEL_SCHEMA_QUICK_REF.md  LAYOUT_VARIANTS_PROGRESS.md  LOCALE_IMPLEMENTATION.md  MODERN_INVOICE_EXPANSION.md  ONLINE_ORDER_VARIANTS_COMPLETE.md  POS_RECEIPT_VARIANTS_COMPLETE.md  PRE_TRAINING_VALIDATION_REPORT.md  PRODUCTION_DEPLOYMENT.md  REALISM_ANALYSIS.md  RETAIL_SPECIALIZATION_ANALYSIS.md  SCHEMA_COMPARISON_MATRIX.md  STEP_10_COMPLETE.md  STEP_11_COMPLETE.md  STEP_12_COMPLETE.md  TEMPLATE_IMPLEMENTATION_STATUS.md  TEMPLATE_SPECIFICATIONS.md  TEST_11_COMPONENTS_STATUS.md  TEST_11_COMPONENT_ANALYSIS.md  TRAINING_SETUP.md  ZERO_PRICE_BUG_ANALYSIS.md
evaluation/: __init__.py  confusion_matrix.py  error_analysis.py  evaluate.py  seqeval_report.py
generators/: README.md  __init__.py  brand_name_generator.py  data_generator.py  html_to_png_renderer.py  image_renderer.py  logo_generator.py  modern_invoice_generator.py  pdf_renderer.py  production_randomizer.py  purchase_order.py  purchase_order_generator.py  randomizers.py  renderer.py  retail_data_generator.py  shopify_product_csv_generator.py  synthetic_data.py  template_category_mapper.py  template_renderer.py  visual_assets.py
scripts/: build_training_set.py  (+35 more)
(+350 files in other folders)
